--- a/index.html
+++ b/index.html
@@ -2609,7 +2609,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     <td width="164" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td></tr>
   <tr align="left">
     <td height="82">
-      <p class="WordSection1">2. One paper accepted to TPAMI! Three papers accepted to ICML 2021! One paper accepted to JMLR! I was invited to be Area Chair of ICLR 2022! I was invited to be Program co-Chair of ICPR 2022! </p></td>
+      <p class="WordSection1">2. One paper won the Silver Best Paper Award at an ICML 2021 Workshop! Huan Li won the best Ph.D. dissertation award at ACM China SIGAI! I was invited to be Area Chair of ICLR 2022! I was invited to be Program co-Chair of ICPR 2022! </p></td>
     </tr>
   <tr align="left">
     <td height="78">
@@ -2871,7 +2871,7 @@ Gradient Method</em>, submitted to IEEE Trans. Automatic Control.</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">116. Hao Kong, Canyi Lu, and <u>Zhouchen Lin</u>, <em>Tensor Q-Rank: New Data Dependent Tensor Rank</em>, Machine Learning, 110(7): 1867-1900 (2021). [<a href="Publications/2021-ML-Tensor Q-Rank.pdf">pdf</a>]</span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">115. Hanyuan Hang, <u>Zhouchen Lin</u>, Xiaoyu Liu, and Hongwei Wen, <em>Histogram Transform Ensembles for Large-scale Regression</em>, J. Machine Learning Research, accepted. [<a href="Publications/2021-JMLR-Histogram Transform Ensembles for Large-scale Regression.pdf">pdf</a>] </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">115. Hanyuan Hang, <u>Zhouchen Lin</u>, Xiaoyu Liu, and Hongwei Wen, <em>Histogram Transform Ensembles for Large-scale Regression</em>, J. Machine Learning Research, 22 (95): 1-87 (2021). [<a href="Publications/2021-JMLR-Histogram Transform Ensembles for Large-scale Regression.pdf">pdf</a>] </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">114. Jia Li, Mingqing Xiao, Cong Fang, Yue Dai, 
 Chao Xu, and <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><u>Zhouchen 
@@ -2884,7 +2884,7 @@ Machines</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&qu
     Learning</em>, <span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">IEEE Trans. Pattern Analysis and Machine Intelligence, accepted. [<a href="Publications/2020-TPAMI-ASVRG-ADMM.pdf">pdf</a>]</span></span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal123117" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12"></span></p>
-<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">1</span><span class="STYLE12">12. Tiancheng Shen, Yibo Yang, <u>Zhouchen Lin</u>, Mingbin Zhang, <em>Recurrent Learning with Clique Structures for Prostate Sparse-view CT Artifacts Reduction</em>, IET Image Processing, accepted. [<a href="Publications/2020-IET-ARCliqueNet.pdf">pdf</a>] </span></p>
+<p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">1</span><span class="STYLE12">12. Tiancheng Shen, Yibo Yang, <u>Zhouchen Lin</u>, Mingbin Zhang, <em>Recurrent Learning with Clique Structures for Prostate Sparse-view CT Artifacts Reduction</em>, IET Image Processing, 15: 648–655 (2021). [<a href="Publications/2020-IET-ARCliqueNet.pdf">pdf</a>] </span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12"></span><span class="STYLE12"></span></p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal1231176" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="STYLE12">111. Xinbang Zhang, Jianlong Chang, Yiwen Guo, Gaofeng Meng, <u>Zhouchen Lin</u>, Shiming Xiang, and Chunhong Pan, <em>DATA: Differentiable ArchiTecture Approximation with Distribution Guided Sampling</em>, IEEE Trans. Pattern Analysis and Machine Intelligence, accepted. [<a href="Publications/2021-TPAMI-DATA.pdf">pdf</a>] </span></p>
@@ -3472,7 +3472,9 @@ Shih, <i>Mathematical Optimal Control Models of Continuous Castin</i>g,
 No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Refereed 
 Conference Papers:<o:p></o:p></span></u></b></p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. 15 papers submitted to NeurIPS 2021.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">25. 15 papers submitted to NeurIPS 2021.</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. Yifei Wang, Yisen Wang, Jiansheng Yang, and <u>Zhouchen Lin</u>, <em>Demystifying Adversarial Training via A Unified Probabilistic Framework</em>, ICML 2021 workshop &quot;A Blessing in Disguise: The Prospects and Perils of Adversarial Machine Learning&quot; (<strong>Silver Best Paper Award</strong>), 2021. </span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">123. Huasong Zhong, Jianlong Wu, Chong Chen, Minghua Deng, Jianqiang Huang, Xian-Sheng Hua, Liqiang Nie, and <u>Zhouchen Lin</u>, <em>Graph Contrastive Clustering</em>, ICCV 2021. [<a href="Publications/2021-ICCV-GCC.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4209,10 +4211,14 @@ granted)</span></p>
 <p>21. (202011012138.5) 基于偏微分算子的广义等变卷积网络模型的图像分类方法 </p>
 <p>22. (PCT/CN2020/084650) 一种基于偏微分算子的等变卷积网络模型的图像分类方法[国际专利]</p>
 <p>23. (PCT/CN2020/132017) 基于偏微分算子的广义等变卷积网络模型的图像分类方法[国际专利]</p>
-<p>24. (202110288109X)  基于偏微分算子的等变3D卷积网络的3D形状图像分类方法</p>
-<p>25. (202110568102.3) 基于旋转不变的规范等变网络模型的物体形状分类方法 </p>
-<p>26. (202110610837.8) 基于多元激活函数的稀疏正则化神经网络的图像分类方法</p>
-<p>27. (2021108277099) 用于图像数据分类的反馈型脉冲神经网络模型训练方法</p>
+<p>24. (2020113268451) 基于流形优化的张量低秩模型非平滑三维图像补全方法 </p>
+<p>25. (202110288109X)  基于偏微分算子的等变3D卷积网络的3D形状图像分类方法</p>
+<p>26. (202110568102.3) 基于旋转不变的规范等变网络模型的物体形状分类方法 </p>
+<p>27. (202110610837.8) 基于多元激活函数的稀疏正则化神经网络的图像分类方法</p>
+<p>28. (2021108277099) 用于图像数据分类的反馈型脉冲神经网络模型训练方法</p>
+<p>29. (202110841105X) 基于幻影梯度的图像分类隐式模型加速训练方法</p>
+<p>30. (202110550895.6) 基于优化诱导的平衡神经网络的图像分类方法</p>
+<p>31. (2021108958875) 基于规范等变转换算子神经网络的三维物体形状分类方法</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
 Activities:   
         <o:p></o:p>
@@ -4372,7 +4378,7 @@ and Implementations of Matrix Reconstruction</a> (in Chinese).
 <p>11. Chen Xu, Ph.D. in 2018. </p>
 <p>12. Feng Cheng and Yameng Huang, Master in 2018.</p>
 <p>13. Gaopeng Jian, PostDoc in 2019.</p>
-<p>14. Huan Li, Cong Fang, and Jianlong Wu, Ph.D. in 2019.</p>
+<p>14. Huan Li (<strong>ACM China SIGAI 2021 Best Ph.D. Dissertation Award</strong>), Cong Fang, and Jianlong Wu, Ph.D. in 2019.</p>
 <p>15. Zhisheng Zhong, Han Yan, Yu Xia, and Ming Yin, Master in 2019.</p>
 <p>16. Xia Li, Hongyang Li, Tiancheng Shen, and Fengcai Li, Master in 2020.</p>
 <p>17. Jia Li, PostDoc in 2020.</p>
@@ -4683,7 +4689,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on July 31, 2021. Number of visitors since March 1, 2010:     
+was last updated on Aug. 9, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
