--- a/index.html
+++ b/index.html
@@ -3474,7 +3474,7 @@ No. 1, pp. 119-127, 1998.</span><o:p></o:p></span></p>
 Conference Papers:<o:p></o:p></span></u></b></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">25. 15 papers submitted to NeurIPS 2021.</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. Yifei Wang, Yisen Wang, Jiansheng Yang, and <u>Zhouchen Lin</u>, <em>Demystifying Adversarial Training via A Unified Probabilistic Framework</em>, ICML 2021 workshop &quot;A Blessing in Disguise: The Prospects and Perils of Adversarial Machine Learning&quot; (<strong>Silver Best Paper Award</strong>), 2021. </span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. Yifei Wang, Yisen Wang, Jiansheng Yang, and <u>Zhouchen Lin</u>, <em>Demystifying Adversarial Training via A Unified Probabilistic Framework</em>, ICML 2021 Workshop &quot;A Blessing in Disguise: The Prospects and Perils of Adversarial Machine Learning&quot; (<strong>Silver Best Paper Award</strong>), 2021. </span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">123. Huasong Zhong, Jianlong Wu, Chong Chen, Minghua Deng, Jianqiang Huang, Xian-Sheng Hua, Liqiang Nie, and <u>Zhouchen Lin</u>, <em>Graph Contrastive Clustering</em>, ICCV 2021. [<a href="Publications/2021-ICCV-GCC.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -3490,7 +3490,7 @@ Conference Papers:<o:p></o:p></span></u></b></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">117. <span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;">Yibo Yang, Shan You, Hongyang Li, Fei Wang, Chen Qian, and <u>Zhouchen Lin</u>, <em>Towards Improving the Consistency, Efficiency, and Flexibility of Differentiable Neural Architecture Search</em>, CVPR 2021. [<a href="Publications/2021-CVPR-DNAS.pdf">pdf</a>]</span></span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">116. Xiangtai Li, Hao He, Xia Li, Duo Li, Guangliang Cheng, Jianping Shi, Lubin Weng, Yunhai Tong, and  <u>Zhouchen Lin</u>, <em>PointFlow: Flowing Semantics Through Points for Aerial Image Segmentation</em>, CVPR 2021. [<a href="Publications/2021-CVPR-PointFlow.pdf">pdf</a>]</span></span></span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">116. Xiangtai Li, Hao He, Xia Li, Duo Li, Guangliang Cheng, Jianping Shi, Lubin Weng, Yunhai Tong, and  <u>Zhouchen Lin</u>, <em>PointFlow: Flowing Semantics Through Points for Aerial Image Segmentation</em>, CVPR 2021. [<a href="Publications/2021-CVPR-PointFlow.pdf">pdf</a>][<a href="https://github.com/lxtGH/PFSegNets">code</a>]</span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">115. Ke Sun, <u>Zhouchen Lin</u>, and Zhanxing Zhu, <em>AdaGCN: Adaboosting Graph Convolutional Networks into Deep Models</em>, ICLR 2021. [<a href="Publications/2021-ICLR-Ada-GCN.pdf">pdf</a>] </span></span></span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4005,10 +4005,11 @@ Invariants</a></span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,
 <p class="MsoNormal" style="-ms-text-autospace:; mso-layout-grid-align: none;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
 <p class="MsoNormal" style="-ms-text-autospace:; mso-layout-grid-align: none;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">8. <u>Zhouchen Lin</u></span><span lang="EN-US">, </span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Arvind
  Ganesh, John Wright, Leqin Wu, Minming Chen, and Yi Ma,</span><span lang="EN-US"> 
-<span class="MsoHyperlink"><a href="http://perception.csl.illinois.edu/matrix-rank/Files/rpca_algorithms.pdf"><i style="mso-bidi-font-style: normal;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Fast
+<span class="MsoHyperlink"><i style="mso-bidi-font-style: normal;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Fast
  Convex Optimization Algorithms for Exact Recovery of a Corrupted Low-Rank
- Matrix</span></i></a></span></span><i style="mso-bidi-font-style: normal;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">,</span></i><span lang="EN-US"> </span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Technical
- Report UILU-ENG-09-2214, UIUC, August 2009.<o:p></o:p></span></p>
+ Matrix</span></i></span></span><i style="mso-bidi-font-style: normal;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">,</span></i> <span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Technical
+ Report UILU-ENG-09-2214, UIUC, August 2009. [<a href="Publications/2009-RPCA-Algorithms.pdf">pdf</a>]
+ <o:p></o:p></span></p>
 <p class="MsoNormal" style="-ms-text-autospace:; mso-layout-grid-align: none;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"><o:p>&nbsp;</o:p></span></p>
 <p class="MsoNormal" style="-ms-text-autospace:; mso-layout-grid-align: none;"><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">9. <u>Zhouchen Lin</u>, Minming 
 Chen, and Yi Ma, <i style="mso-bidi-font-style: normal;">The Augmented Lagrange 
@@ -4219,6 +4220,7 @@ granted)</span></p>
 <p>29. (202110841105X) 基于幻影梯度的图像分类隐式模型加速训练方法</p>
 <p>30. (202110550895.6) 基于优化诱导的平衡神经网络的图像分类方法</p>
 <p>31. (2021108958875) 基于规范等变转换算子神经网络的三维物体形状分类方法</p>
+<p>32. (2021109109762) 一种基于动态滤波等变卷积网络模型的图像分类方法</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Academic 
 Activities:   
         <o:p></o:p>
@@ -4273,8 +4275,9 @@ Recognition,  Institute of Advanced Technology, Chinese Academy of Sciences,
 Shenzhen.</p>
 <p>21. Senior Consultant of Guangdong Lab. of Artificial Intelligence and Digital Economy (Pazhou Lab.).</p>
 <p>22. Technical Advisory Board of AI School, Nanjing University of Aeronautics and Astronautics.</p>
-<p>23. 国家天元数学西北中心2021主题活动年专家委员会委员。中心  2021年活动主题为“最优化方法与人工智能”。</p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">24. Reviewer/Editor 
+<p>23. Technical Advisory Board of 广东省大数据计算基础理论与方法重点实验室。 </p>
+<p>24. 国家天元数学西北中心2021主题活动年专家委员会委员。中心  2021年活动主题为“最优化方法与人工智能”。</p>
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">25. Reviewer/Editor 
   to Journals:    
     <o:p></o:p>
 </span></p>
@@ -4293,7 +4296,7 @@ Shenzhen.</p>
   Photogrammetric Engineering and Remote Sensing, </span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">中国科学</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">(E</span><span style="mso-ascii-font-family: Verdana; mso-hansi-font-family: Verdana;">辑</span><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">) [Science in China
     (Series E)] 
   <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">25. 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">26. 
 Reviewer/Chair to Conferences:   
     <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  ICLR 2022 (<strong>Area Chair</strong>), ICPR 2022  
@@ -4335,7 +4338,7 @@ Pattern Recognition 2010, Asian Conf. Computer Vision 2009 (<b style="mso-bidi-f
  Conf. Multimodal Interfaces 2002, Int’l Conf. Images and Graphics 2002, Int’l
  Conf. Computer Vision 2001, Pacific Graphics 2001 
  <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">26. 
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">27. 
 Membership:     <strong>IEEE Fellow</strong>, <strong>IAPR Fellow</strong>     
 <o:p></o:p></span></p>
 <p><strong><b style="mso-bidi-font-weight: normal;"><u><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Awards:</span></u></b></strong></p>
@@ -4377,11 +4380,14 @@ and Implementations of Matrix Reconstruction</a> (in Chinese).
 <p>10. Yaoquan Hu, Bin Hao and Shanzi Lu, Master in 2017.</p>
 <p>11. Chen Xu, Ph.D. in 2018. </p>
 <p>12. Feng Cheng and Yameng Huang, Master in 2018.</p>
-<p>13. Gaopeng Jian, PostDoc in 2019.</p>
-<p>14. Huan Li (<strong>ACM China SIGAI 2021 Best Ph.D. Dissertation Award</strong>), Cong Fang, and Jianlong Wu, Ph.D. in 2019.</p>
-<p>15. Zhisheng Zhong, Han Yan, Yu Xia, and Ming Yin, Master in 2019.</p>
-<p>16. Xia Li, Hongyang Li, Tiancheng Shen, and Fengcai Li, Master in 2020.</p>
+<p>13. Huan Li (<strong>ACM China SIGAI 2021 Best Ph.D. Dissertation Award</strong>), Cong Fang, and Jianlong Wu, Ph.D. in 2019.</p>
+<p>14. Zhisheng Zhong, Han Yan, Yu Xia, and Ming Yin, Master in 2019.</p>
+<p>15. Gaopeng Jian, PostDoc in 2019.</p>
+<p>16. Xia Li, Hongyang Li, Tiancheng Shen, Ke Sun, and Fengcai Li, Master in 2020.</p>
 <p>17. Jia Li, PostDoc in 2020.</p>
+<p>18. Yibo Yang and Hao Kong, Ph.D. in 2021.</p>
+<p>19. Yijia Wang, Junzhao Zhang, Xueqian Yao, You Zhou, and Yuchen Zheng, Master in 2021.</p>
+<p>20. Yong Chen, PostDoc in 2021. </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Keynote 
   Speeches:<o:p></o:p></span></u></b></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1. Low Rank
