--- a/index.html
+++ b/index.html
@@ -2617,20 +2617,18 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     </tr>
   <tr align="left">
     <td height="73">
-      <p class="WordSection1">4. My new book, <a href="https://www.springer.com/gp/book/9789811529092">Accelerated Optimization for Machine Learning: First-Order Algorithms</a>, has been published by Springer! Michael Jordan wrote one of the forewords! (<a href="Errata_of_Accelerated_Optimization.pdf"><strong>Errata</strong></a>) </p></td>
+      <p class="WordSection1">4. My new book, <a href="https://item.jd.com/13357588.html">Accelerated Optimization for Machine Learning: First-Order Algorithms</a> (Chinese version, with errors in English version corrected), has been published! </p></td>
     <td width="164" rowspan="3"><img width="168" height="215" alt="Cover" src="./index_files/Cover_Design1.png"></td>
   </tr>
   <tr align="left">
     <td height="70">
-      <p class="WordSection1">5. My  book, <a href="https://www.amazon.com/Low-Rank-Models-Visual-Analysis-Applications/dp/0128127317?from=groupmessage">Low-Rank 
-        Models in Visual Analysis: Theories, Algorithms, and Applications,</a> has 
-        been published by Academic Press. </p></td>
+      <p class="WordSection1">5. My new book, <a href="https://www.springer.com/gp/book/9789811529092">Accelerated Optimization for Machine Learning: First-Order Algorithms</a>, has been published by Springer! Michael Jordan wrote one of the forewords! (<a href="Errata_of_Accelerated_Optimization.pdf"><strong>Errata</strong></a>) </p></td>
     </tr>
   <tr align="left">
     <td height="62">
-      <p>6. A new journal of American Institute of Mathematical Sciences, <a href="http://aimsciences.org/journals/BDIA.jsp?journalID=27">Big Data and 
-        Information Analytics</a> (I am its Executive Editor)<span class="STYLE15"> welcomes high-quality 
-          submissions!</span></p></td>
+      <p>6. My  book, <a href="https://www.amazon.com/Low-Rank-Models-Visual-Analysis-Applications/dp/0128127317?from=groupmessage">Low-Rank 
+        Models in Visual Analysis: Theories, Algorithms, and Applications,</a> has 
+        been published by Academic Press. </p></td>
     </tr>
   </tbody></table>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"></span><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Curriculum 
