--- a/index.html
+++ b/index.html
@@ -2596,29 +2596,32 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
       is empty, but equally, practice without theory is blind.</span> <span class="MsoNormal STYLE2">---- I. Kant </span></p></td></tr></tbody></table>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Highlights:</span></u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"> 
   <o:p></o:p> </span></b></p>
-<table width="786" height="519" border="1">
+<table width="913" height="502" border="1">
   <tbody>
   <tr>
-    <td width="606" height="91" align="left">
+    <td width="557" height="91" align="left">
       <p class="WordSection1">1. <a href="https://zhouchenlin.github.io/Recruitment.htm">My 
       group is<span class="STYLE26"> recruiting </span>tenure-track 
       faculties</a> and PostDocs (<a href="https://zhouchenlin.github.io/Academic.htm">academic</a>, 
       annual salary ~USD40K). 
       <a href="https://zhouchenlin.github.io/Recruitment%20at%20Zhijiang%20LAB.htm">My 
       lab at Zhejiang LAB is also recruiting</a> Researchers and PostDocs. </p></td>
-    <td width="164" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td></tr>
+    <td width="168" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td>
+    <td width="166" rowspan="3"><img src="../Publications/Acceleration_Book/Chinese/封面.png" width="209" height="249"></td>
+  </tr>
   <tr align="left">
     <td height="82">
-      <p class="WordSection1">2. One paper won the Silver Best Paper Award at an ICML 2021 Workshop! Huan Li won the best Ph.D. dissertation award at ACM China SIGAI! I was invited to be Area Chair of ICLR 2022! I was invited to be Program co-Chair of ICPR 2022! </p></td>
+      <p class="WordSection1">2. One paper won the <strong>Best  Student Paper Award</strong> of the Research track at ECML/PKDD 2021! One paper won the <strong>Silver Best Paper Award</strong> at an ICML 2021 Workshop! Huan Li won the <strong>best Ph.D. dissertation award</strong> at ACM China SIGAI! I was invited to be Program co-Chair of ICPR 2022! </p></td>
     </tr>
   <tr align="left">
-    <td height="78">
-      <p class="WordSection1">3.  I was elected as a Year 2020 Distinguished Speaker of China Computer Federation (CCF)! My work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot; won the first prize of CCF Natural Science Award. </p></td>
+    <td height="74">
+      <p class="WordSection1">3.  My work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot; won the first prize of CCF Natural Science Award! </p></td>
     </tr>
   <tr align="left">
     <td height="73">
       <p class="WordSection1">4. My new book, <a href="https://item.jd.com/13357588.html">Accelerated Optimization for Machine Learning: First-Order Algorithms</a> (Chinese version, with errors in English version corrected), has been published! </p></td>
-    <td width="164" rowspan="3"><img width="168" height="215" alt="Cover" src="./index_files/Cover_Design1.png"></td>
+    <td width="168" rowspan="3"><img width="168" height="215" alt="Cover" src="./index_files/Cover_Design1.png"></td>
+    <td width="166" rowspan="3">One more book is coming ... </td>
   </tr>
   <tr align="left">
     <td height="70">
@@ -3476,7 +3479,7 @@ Conference Papers:<o:p></o:p></span></u></b></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">123. Huasong Zhong, Jianlong Wu, Chong Chen, Minghua Deng, Jianqiang Huang, Xian-Sheng Hua, Liqiang Nie, and <u>Zhouchen Lin</u>, <em>Graph Contrastive Clustering</em>, ICCV 2021. [<a href="Publications/2021-ICCV-GCC.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">122. Yifei Wang, Yisen Wang, Jiansheng Yang and <u>Zhouchen Lin</u>,	<em>Reparameterized Sampling for Generative Adversarial Networks,</em> ECML/PKDD 2021. [<a href="Publications/2021-ECML-PKDD-RS-GAN.pdf">pdf</a>][<a href="Publications/2021-ECML-PKDD-RS-GAN-supp.pdf">Supplementary Material</a>]</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">122. Yifei Wang, Yisen Wang, Jiansheng Yang and <u>Zhouchen Lin</u>,	<em>Reparameterized Sampling for Generative Adversarial Networks,</em> ECML/PKDD 2021 (<strong>Best  Student Paper award of the Research Track</strong>). [<a href="Publications/2021-ECML-PKDD-RS-GAN.pdf">pdf</a>][<a href="Publications/2021-ECML-PKDD-RS-GAN-supp.pdf">Supplementary Material</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"></span><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">21. Jingyi Cui, Hanyuan Hang, Yisen Wang, and <u>Zhouchen Lin</u>, <em>GBHT: Gradient Boosting Histogram Transform for Density Estimation</em>, ICML 2021. [<a href="Publications/2021-ICML-GBHT.pdf">pdf</a>][<a href="Publications/2021-ICML-GBHT-supp.pdf">Supplementary Material</a>] </span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
@@ -4693,7 +4696,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Aug. 9, 2021. Number of visitors since March 1, 2010:     
+was last updated on Aug. 24, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
