--- a/index.html
+++ b/index.html
@@ -2607,7 +2607,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
       <a href="https://zhouchenlin.github.io/Recruitment%20at%20Zhijiang%20LAB.htm">My 
       lab at Zhejiang LAB is also recruiting</a> Researchers and PostDocs. </p></td>
     <td width="168" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td>
-    <td width="166" rowspan="3"><img src="../Publications/Acceleration_Book/Chinese/封面.png" width="209" height="249"></td>
+    <td width="166" rowspan="3"><img src="index_files/Accelerated-Opt.png" alt="" width="180" height="247"></td>
   </tr>
   <tr align="left">
     <td height="82">
@@ -2774,8 +2774,7 @@ Areas:</span></u></b><b style="mso-bidi-font-weight: normal;"><span lang="EN-US"
 Learning, Numerical Optimization   
   <o:p></o:p> 
 </span> [<a href="http://scholar.google.com.hk/citations?user=TanjFwoAAAAJ&amp;hl=en">Google 
-Scholar Citations</a>][<a href="https://dblp.org/pers/l/Lin:Zhouchen.html">dblp</a>] 
-</p>
+Scholar Citations</a>][<a href="https://dblp.org/pers/l/Lin:Zhouchen.html">dblp</a>][<a href="https://www.semanticscholar.org/author/Zhouchen-Lin/33383055">Semantic Scholar</a> ]</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Books 
 Edited:</span></u></b></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">
