--- a/index.html
+++ b/index.html
@@ -2611,11 +2611,11 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
   </tr>
   <tr align="left">
     <td height="82">
-      <p class="WordSection1">2. One paper won the <strong>Best  Student Paper Award</strong> of the Research track at ECML/PKDD 2021! One paper won the <strong>Silver Best Paper Award</strong> at an ICML 2021 Workshop! Huan Li won the <strong>best Ph.D. dissertation award</strong> at ACM China SIGAI! I was invited to be Program co-Chair of ICPR 2022! </p></td>
+      <p class="WordSection1">2. I was selected as one of four <strong>distinguished Area Chairs</strong> of IJCAI 2021! One paper won the <strong>Best  Student Paper Award</strong> of the Research track at ECML/PKDD 2021! One paper won the <strong>Silver Best Paper Award</strong> at an ICML 2021 Workshop! Huan Li won the <strong>best Ph.D. dissertation award</strong> at ACM China SIGAI!  </p></td>
     </tr>
   <tr align="left">
     <td height="74">
-      <p class="WordSection1">3.  My work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot; won the first prize of CCF Natural Science Award! </p></td>
+      <p class="WordSection1">3.  I was invited to be <strong>Program co-Chair</strong> of ICPR 2022! My work &quot;Theories and Methods of Low-Rank Models for High-Dimensional Complex Data&quot; won the <strong>first prize</strong> of CCF Natural Science Award! </p></td>
     </tr>
   <tr align="left">
     <td height="73">
@@ -2774,15 +2774,16 @@ Areas:</span></u></b><b style="mso-bidi-font-weight: normal;"><span lang="EN-US"
 Learning, Numerical Optimization   
   <o:p></o:p> 
 </span> [<a href="http://scholar.google.com.hk/citations?user=TanjFwoAAAAJ&amp;hl=en">Google 
-Scholar Citations</a>][<a href="https://dblp.org/pers/l/Lin:Zhouchen.html">dblp</a>][<a href="https://www.semanticscholar.org/author/Zhouchen-Lin/33383055">Semantic Scholar</a> ]</p>
+Scholar Citations</a>][<a href="https://dblp.org/pers/l/Lin:Zhouchen.html">dblp</a>][<a href="https://www.semanticscholar.org/author/Zhouchen-Lin/33383055">Semantic Scholar</a>]</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Books 
 Edited:</span></u></b></p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">
   <o:p></o:p>
 </span></u></b><u>Zhouchen Lin</u>, Liang Wang, Jian Yang, Guangming Shi, Tieniu Tan, Nanning Zheng, Xilin Chen, Yanning Zhang: <a href="https://www.springer.com/gp/book/9783030316532">Proceedings of Pattern Recognition and Computer Vision - Second Chinese Conference</a>, PRCV 2019, Xi'an, China, November 8-11, 2019, Part I-III. Lecture Notes in Computer Science 11857-11857, Springer 2019.</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Books:</span></u></b></p>
-<p>1. <u>Zhouchen Lin</u>, Huan Li, and Cong Fang, <em><a href="https://www.amazon.com/Accelerated-Optimization-Machine-Learning-First-Order/dp/9811529094/ref=sr_1_1?keywords=Accelerated+Optimization+in+Machine+Learning%3A+First-Order+Algorithms&qid=1584055798&sr=8-1">Accelerated Optimization for Machine Learning: First-Order Algorithms</a></em>, Springer, 2020.</p>
-<p>2. <u>Zhouchen Lin</u> and Hongyang Zhang, <em><a href="https://www.amazon.com/Low-Rank-Models-Visual-Analysis-Applications/dp/B074RBTBG9/ref=sr_1_1?keywords=Low-Rank+Models+in+Visual+Analysis%3A+Theories%2C+Algorithms%2C+and+Applications&qid=1584055721&sr=8-1">Low-Rank Models in Visual Analysis: Theories, Algorithms, and Applications</a></em>, Academic Press, 2017. </p>
+<p>1. <u>Zhouchen Lin</u>, Huan Li, and Cong Fang, <a href="https://item.jd.com/13357588.html"><em>Accelerated Optimization for Machine Learning: First-Order Algorithms</em></a> (Chinese version, with errors in English version corrected), China Machine Press, 2021. </p>
+<p>2.  <u>Zhouchen Lin</u>, Huan Li, and Cong Fang, <em><a href="https://www.amazon.com/Accelerated-Optimization-Machine-Learning-First-Order/dp/9811529094/ref=sr_1_1?keywords=Accelerated+Optimization+in+Machine+Learning%3A+First-Order+Algorithms&qid=1584055798&sr=8-1">Accelerated Optimization for Machine Learning: First-Order Algorithms</a></em>, Springer, 2020. (<a href="Errata_of_Accelerated_Optimization.pdf"><strong>Errata</strong></a>) </p>
+<p>3. <u>Zhouchen Lin</u> and Hongyang Zhang, <em><a href="https://www.amazon.com/Low-Rank-Models-Visual-Analysis-Applications/dp/B074RBTBG9/ref=sr_1_1?keywords=Low-Rank+Models+in+Visual+Analysis%3A+Theories%2C+Algorithms%2C+and+Applications&qid=1584055721&sr=8-1">Low-Rank Models in Visual Analysis: Theories, Algorithms, and Applications</a></em>, Academic Press, 2017. </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Book 
   Chapters:
   <o:p></o:p>
@@ -4301,7 +4302,7 @@ Reviewer/Chair to Conferences:
     <o:p></o:p></span></p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  ICLR 2022 (<strong>Area Chair</strong>), ICPR 2022  
 (<strong>Program Co-Chair</strong>), NIPS 
-2021 (<strong>Area Chair</strong>), ICML 2021 (<strong>Area Chair</strong>), IJCAI 2021 (<strong>Area Chair</strong>, <strong>Video Competition Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
+2021 (<strong>Area Chair</strong>), ICML 2021 (<strong>Area Chair</strong>), IJCAI 2021 (<strong>distinguished Area Chair</strong>, <strong>Video Competition Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
 (<strong>Area Chair</strong>), ACML 2020 (<strong>Area Chair</strong>), NIPS 
 2020 (<strong>Area Chair</strong>), ICPR 2020 (<strong>Track Chair</strong>), ICML 2020 (<strong>Area Chair</strong>), IJCAI 2020 (<strong>Area Chair</strong>), CVPR 2020 
 (<strong>Area Chair</strong>), AAAI 2020 (<strong>Area Chair</strong>), NIPS 
@@ -4695,7 +4696,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Aug. 24, 2021. Number of visitors since March 1, 2010:     
+was last updated on Aug. 30, 2021. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
