--- a/index.html
+++ b/index.html
@@ -2564,12 +2564,7 @@ theoretical analysis</strong></u> in order to enjoy with me how
 to use  mathematics to solve real problems elegantly. Reference books (downloadable from http://gen.lib.rus.ec/): </span></p>
 <p>1. Amir Beck, First-order Methods in Optimization.<br>
   2. Hoang Tuy, Convex Analysis and Global Optimization, 2nd Edition.<br>
-  3. Mehryar Mohri, Afshin Rostamizadeh, and Ameet Talwalkar, Foundations of Machine Learning, 2nd Edition. You may skip chapters 14 &amp; 16.<br>
-</p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"> I am also recruiting 
-  Masters who have <b style="mso-bidi-font-weight: normal;"><u> strong coding 
-    skills</u></b> and interests in Quantitative Trading (<a href="https://zhouchenlin.github.io/%E9%87%8F%E5%8C%96%E6%8A%95%E8%B5%84%E2%80%94%E2%80%94%E7%AD%96%E7%95%A5%E4%B8%8E%E6%8A%80%E6%9C%AF.pdf">a 
-      reference book</a>). </span></p>
+  3. Mehryar Mohri, Afshin Rostamizadeh, and Ameet Talwalkar, Foundations of Machine Learning, 2nd Edition. You may skip chapters 14 &amp; 16.</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Welcome to send me (zlin (at) <span class="GramE">pku</span> (dot) edu (dot) cn) your detailed resume!   
   <o:p></o:p>
 </span></p>
@@ -2611,7 +2606,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
   </tr>
   <tr align="left">
     <td height="82">
-      <p class="WordSection1">2. I was selected as one of four <strong>distinguished Area Chairs</strong> of IJCAI 2021! One paper won the <strong>Best  Student Paper Award</strong> of the Research track at ECML/PKDD 2021! One paper won the <strong>Silver Best Paper Award</strong> at an ICML 2021 Workshop! Huan Li won the <strong>best Ph.D. dissertation award</strong> at ACM China SIGAI!  </p></td>
+      <p class="WordSection1">2. I was selected as one of four <strong>distinguished Area Chairs</strong> of IJCAI 2021! One paper won the<a href="https://2021.ecmlpkdd.org/?page_id=2148"><strong> Best  (Student) Paper Award</strong></a> of the Research track at ECML/PKDD 2021! One paper won the <strong>Silver Best Paper Award</strong> at an ICML 2021 Workshop! Huan Li won the <strong>best Ph.D. dissertation award</strong> at ACM China SIGAI!  </p></td>
     </tr>
   <tr align="left">
     <td height="74">
@@ -3479,7 +3474,7 @@ Conference Papers:<o:p></o:p></span></u></b></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">123. Huasong Zhong, Jianlong Wu, Chong Chen, Minghua Deng, Jianqiang Huang, Xian-Sheng Hua, Liqiang Nie, and <u>Zhouchen Lin</u>, <em>Graph Contrastive Clustering</em>, ICCV 2021. [<a href="Publications/2021-ICCV-GCC.pdf">pdf</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
-<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">122. Yifei Wang, Yisen Wang, Jiansheng Yang and <u>Zhouchen Lin</u>,	<em>Reparameterized Sampling for Generative Adversarial Networks,</em> ECML/PKDD 2021 (<strong>Best  Student Paper award of the Research Track</strong>). [<a href="Publications/2021-ECML-PKDD-RS-GAN.pdf">pdf</a>][<a href="Publications/2021-ECML-PKDD-RS-GAN-supp.pdf">Supplementary Material</a>]</span></p>
+<p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">122. Yifei Wang, Yisen Wang, Jiansheng Yang and <u>Zhouchen Lin</u>,	<em>Reparameterized Sampling for Generative Adversarial Networks,</em> ECML/PKDD 2021 (<a href="https://2021.ecmlpkdd.org/?page_id=2148"><strong>Best  (Student) Paper award of the Research Track</strong></a>). [<a href="Publications/2021-ECML-PKDD-RS-GAN.pdf">pdf</a>][<a href="Publications/2021-ECML-PKDD-RS-GAN-supp.pdf">Supplementary Material</a>]</span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13=""><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"></span><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;"><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">1</span></span></span><span style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">21. Jingyi Cui, Hanyuan Hang, Yisen Wang, and <u>Zhouchen Lin</u>, <em>GBHT: Gradient Boosting Histogram Transform for Density Estimation</em>, ICML 2021. [<a href="Publications/2021-ICML-GBHT.pdf">pdf</a>][<a href="Publications/2021-ICML-GBHT-supp.pdf">Supplementary Material</a>] </span></p>
 <p class="MsoNormal26413171" style="-ms-text-autospace:; mso-pagination: none; mso-layout-grid-align: none;" style13="">&nbsp;</p>
