--- a/index.html
+++ b/index.html
@@ -4387,12 +4387,12 @@ and Implementations of Matrix Reconstruction</a> (in Chinese).
 <p>10. Yaoquan Hu, Bin Hao and Shanzi Lu, Master in 2017.</p>
 <p>11. Chen Xu, Ph.D. in 2018. </p>
 <p>12. Feng Cheng and Yameng Huang, Master in 2018.</p>
-<p>13. Huan Li (<strong>ACM China SIGAI 2021 Best Ph.D. Dissertation Award</strong>), Cong Fang, and Jianlong Wu, Ph.D. in 2019.</p>
+<p>13. Huan Li (<strong>ACM China SIGAI 2021 Outstanding Ph.D. Dissertation Award</strong>), Cong Fang, and Jianlong Wu, Ph.D. in 2019.</p>
 <p>14. Zhisheng Zhong, Han Yan, Yu Xia, and Ming Yin, Master in 2019.</p>
 <p>15. Gaopeng Jian, PostDoc in 2019.</p>
 <p>16. Xia Li, Hongyang Li, Tiancheng Shen, Ke Sun, and Fengcai Li, Master in 2020.</p>
 <p>17. Jia Li, PostDoc in 2020.</p>
-<p>18. Yibo Yang (<strong>CAAI 2021 Best Ph.D. Dissertation Award</strong>) and Hao Kong, Ph.D. in 2021.</p>
+<p>18. Yibo Yang (<strong>CAAI 2021 Outstanding Ph.D. Dissertation Award</strong>) and Hao Kong, Ph.D. in 2021.</p>
 <p>19. Yijia Wang, Junzhao Zhang, Xueqian Yao, You Zhou, and Yuchen Zheng, Master in 2021.</p>
 <p>20. Yong Chen, PostDoc in 2021. </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Keynote 
