--- a/index.html
+++ b/index.html
@@ -2592,7 +2592,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
       is empty, but equally, practice without theory is blind.</span> <span class="MsoNormal STYLE2">---- I. Kant </span></p></td></tr></tbody></table>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Highlights:</span></u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"> 
   <o:p></o:p> </span></b></p>
-<table width="913" height="502" border="1">
+<table width="913" height="518" border="1">
   <tbody>
   <tr>
     <td width="557" height="91" align="left">
@@ -2600,30 +2600,29 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
       group is<span class="STYLE26"> recruiting </span>tenure-track 
       faculties</a> and PostDocs (<a href="https://zhouchenlin.github.io/Academic.htm">academic</a>, 
       annual salary ~USD40K).       </p></td>
-    <td width="168" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="249"></td>
+    <td width="168" rowspan="3"><img src="./index_files/Opt_Cover.png" width="167" height="247"></td>
     <td width="166" rowspan="3"><img src="index_files/Accelerated-Opt.png" alt="" width="180" height="247"></td>
   </tr>
   <tr align="left">
     <td height="82">
-      <p class="WordSection1">2.  One paper accepted to CVPR 2022! Three papers accept to ICLR 2022! Yibo Yang won the <strong>outstanding Ph.D. dissertation award</strong> at CAAI! Huan Li won the <strong>outstanding Ph.D. dissertation award</strong> at ACM China SIGAI!  </p></td>
+      <p class="WordSection1">2.  One paper accepted to CVPR 2022! Three papers accept to ICLR 2022! Yibo Yang won the <strong>outstanding Ph.D. dissertation award</strong> at CAAI! Huan Li won the <strong>outstanding Ph.D. dissertation award</strong> at ACM China SIGAI!  I was invited to be <strong>Program co-Chair</strong> of ICPR 2022 and <strong>Senior Area Chairs</strong> of ICML 2022 and NeurIPS 2022! </p></td>
     </tr>
   <tr align="left">
     <td height="74">
-      <p class="WordSection1">3.  I was invited to be <strong>Program co-Chair</strong> of ICPR 2022 and <strong>Senior Area Chair</strong> of ICML 2022! </p></td>
+      <p class="WordSection1">3.  My new book, <a href="https://www.amazon.com/Alternating-Direction-Multipliers-Machine-Learning/dp/9811698392/ref=sr_1_1?crid=ZI1GON5YVN42&keywords=Alternating+Direction+Method+of+Multipliers+for+Machine+Learning&qid=1648655100&sprefix=alternating+direction+method+of+multipliers+for+machine+learning%2Caps%2C288&sr=8-1">Alternating Direction Method of Multipliers for Machine Learning</a><a href="https://www.springer.com/gp/book/9789811529092"></a>, will be published by Springer! </p></td>
     </tr>
   <tr align="left">
     <td height="73">
       <p class="WordSection1">4. My new book, <a href="https://item.jd.com/13357588.html">Accelerated Optimization for Machine Learning: First-Order Algorithms</a> (Chinese version, with errors in English version corrected), has been published! </p></td>
-    <td width="168" rowspan="3"><img width="168" height="215" alt="Cover" src="./index_files/Cover_Design1.png"></td>
-    <td width="166" rowspan="3"><p align="center"><strong>Alternating Direction Method of Multipliers for Machine Learning </strong></p>
-      <p align="center">(in press by Springer) </p></td>
+    <td width="168" rowspan="3"><img width="167" height="247" alt="Cover" src="./index_files/Cover_Design1.png"></td>
+    <td width="166" rowspan="3"><p align="center"><img src="../Publications/ADMM_Book/Cover.png" width="180" height="247"></p>      </td>
   </tr>
   <tr align="left">
     <td height="70">
       <p class="WordSection1">5. My new book, <a href="https://www.springer.com/gp/book/9789811529092">Accelerated Optimization for Machine Learning: First-Order Algorithms</a>, has been published by Springer! Michael Jordan wrote one of the forewords! (<a href="Errata_of_Accelerated_Optimization.pdf"><strong>Errata</strong></a>) </p></td>
     </tr>
   <tr align="left">
-    <td height="62">
+    <td height="101">
       <p>6. My  book, <a href="https://www.amazon.com/Low-Rank-Models-Visual-Analysis-Applications/dp/0128127317?from=groupmessage">Low-Rank 
         Models in Visual Analysis: Theories, Algorithms, and Applications,</a> has 
         been published by Academic Press. </p></td>
@@ -2776,7 +2775,7 @@ Edited:</span></u></b></p>
   <o:p></o:p>
 </span></u></b><u>Zhouchen Lin</u>, Liang Wang, Jian Yang, Guangming Shi, Tieniu Tan, Nanning Zheng, Xilin Chen, Yanning Zhang: <a href="https://www.springer.com/gp/book/9783030316532">Proceedings of Pattern Recognition and Computer Vision - Second Chinese Conference</a>, PRCV 2019, Xi'an, China, November 8-11, 2019, Part I-III. Lecture Notes in Computer Science 11857-11857, Springer 2019.</p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Books:</span></u></b></p>
-<p>1. <u>Zhouchen Lin</u>, Huan Li, and Cong Fang, <em>Alternating Direction Method of Multipliers for Machine Learning</em>, Springer, 2022.</p>
+<p>1. <u>Zhouchen Lin</u>, Huan Li, and Cong Fang, <a href="https://www.amazon.com/Alternating-Direction-Multipliers-Machine-Learning/dp/9811698392/ref=sr_1_1?crid=ZI1GON5YVN42&keywords=Alternating+Direction+Method+of+Multipliers+for+Machine+Learning&qid=1648655100&sprefix=alternating+direction+method+of+multipliers+for+machine+learning,aps,288&sr=8-1"><em>Alternating Direction Method of Multipliers for Machine Learning</em></a>, Springer, 2022.</p>
 <p>2. <u>Zhouchen Lin</u>, Huan Li, and Cong Fang, <a href="https://item.jd.com/13357588.html"><em>Accelerated Optimization for Machine Learning: First-Order Algorithms</em></a> (Chinese version, with errors in English version corrected), China Machine Press, 2021. </p>
 <p>3.  <u>Zhouchen Lin</u>, Huan Li, and Cong Fang, <em><a href="https://www.amazon.com/Accelerated-Optimization-Machine-Learning-First-Order/dp/9811529094/ref=sr_1_1?keywords=Accelerated+Optimization+in+Machine+Learning%3A+First-Order+Algorithms&qid=1584055798&sr=8-1">Accelerated Optimization for Machine Learning: First-Order Algorithms</a></em>, Springer, 2020. (<a href="Errata_of_Accelerated_Optimization.pdf"><strong>Errata</strong></a>) </p>
 <p>4. <u>Zhouchen Lin</u> and Hongyang Zhang, <em><a href="https://www.amazon.com/Low-Rank-Models-Visual-Analysis-Applications/dp/B074RBTBG9/ref=sr_1_1?keywords=Low-Rank+Models+in+Visual+Analysis%3A+Theories%2C+Algorithms%2C+and+Applications&qid=1584055721&sr=8-1">Low-Rank Models in Visual Analysis: Theories, Algorithms, and Applications</a></em>, Academic Press, 2017. </p>
@@ -4319,7 +4318,8 @@ Shenzhen.</p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">27. 
 Reviewer/Chair to Conferences:   
     <o:p></o:p></span></p>
-<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  ICML 2022 (<strong>Senior Area Chair</strong>), ICLR 2022 (<strong>Area Chair</strong>), ICPR 2022  
+<p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">  NIPS 
+2022 (<strong>Senior Area Chair</strong>), ICML 2022 (<strong>Senior Area Chair</strong>), ICLR 2022 (<strong>Area Chair</strong>), ICPR 2022  
 (<strong>Program Co-Chair</strong>), ACML 2021 (<strong>Area Chair</strong>), NIPS 
 2021 (<strong>Area Chair</strong>), ICML 2021 (<strong>Area Chair</strong>), IJCAI 2021 (<strong>distinguished Area Chair</strong>, <strong>Video Competition Chair</strong>), ICLR 2021 (<strong>Area Chair</strong>), CVPR 2021 
 (<strong>Area Chair</strong>), PRCV 2021 
@@ -4729,7 +4729,7 @@ University (Sept. 20, 2016). </span></p>
 <hr width="100%" size="3" align="center">
 </span></div>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">This website 
-was last updated on Mar. 6, 2022. Number of visitors since March 1, 2010:     
+was last updated on Mar. 30, 2022. Number of visitors since March 1, 2010:     
     <o:p></o:p></span></p>
 <p align="center" class="MsoNormal" style="text-align: center;"><span lang="EN-US"><a <a="" href="https://www.easycounter.com/">
 <img src="https://www.easycounter.com/counter.php?zlin_counter" border="0" alt="Web Counters">
