--- a/index.html
+++ b/index.html
@@ -2592,7 +2592,7 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
       is empty, but equally, practice without theory is blind.</span> <span class="MsoNormal STYLE2">---- I. Kant </span></p></td></tr></tbody></table>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Highlights:</span></u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;"> 
   <o:p></o:p> </span></b></p>
-<table width="913" height="518" border="1">
+<table width="913" height="507" border="1">
   <tbody>
   <tr>
     <td width="557" height="91" align="left">
@@ -2615,14 +2615,14 @@ to use  mathematics to solve real problems elegantly. Reference books (downloada
     <td height="73">
       <p class="WordSection1">4. My new book, <a href="https://item.jd.com/13357588.html">Accelerated Optimization for Machine Learning: First-Order Algorithms</a> (Chinese version, with errors in English version corrected), has been published! </p></td>
     <td width="168" rowspan="3"><img width="167" height="247" alt="Cover" src="./index_files/Cover_Design1.png"></td>
-    <td width="166" rowspan="3"><p align="center"><img src="../Publications/ADMM_Book/Cover.png" width="180" height="247"></p>      </td>
+    <td width="166" rowspan="3"><p align="center"><img src="index_files/ADMM.png" width="180" height="247"></p>      </td>
   </tr>
   <tr align="left">
     <td height="70">
       <p class="WordSection1">5. My new book, <a href="https://www.springer.com/gp/book/9789811529092">Accelerated Optimization for Machine Learning: First-Order Algorithms</a>, has been published by Springer! Michael Jordan wrote one of the forewords! (<a href="Errata_of_Accelerated_Optimization.pdf"><strong>Errata</strong></a>) </p></td>
     </tr>
   <tr align="left">
-    <td height="101">
+    <td height="85">
       <p>6. My  book, <a href="https://www.amazon.com/Low-Rank-Models-Visual-Analysis-Applications/dp/0128127317?from=groupmessage">Low-Rank 
         Models in Visual Analysis: Theories, Algorithms, and Applications,</a> has 
         been published by Academic Press. </p></td>
