--- a/index.html
+++ b/index.html
@@ -4426,7 +4426,9 @@ and Implementations of Matrix Reconstruction</a> (in Chinese).
 <p>18. Yibo Yang (<strong>CAAI 2021 Outstanding Ph.D. Dissertation Award</strong>) and Hao Kong, Ph.D. in 2021.</p>
 <p>19. Yijia Wang, Junzhao Zhang, Xueqian Yao, You Zhou, and Yuchen Zheng, Master in 2021.</p>
 <p>20. Yong Chen, PostDoc in 2021. </p>
-<p>21. Feng Jiang, Qiuhao Wang, and Zhiheng Kong, Master in 2022. </p>
+<p>21. Zhenyang Shen, Ph.D. in 2022. </p>
+<p>22. Feng Jiang, Qiuhao Wang, Zhiheng Kong, and Nan Ke, Master in 2022. </p>
+<p>23. Zenan Ling, PostDoc in 2022. </p>
 <p><b style="mso-bidi-font-weight: normal;"><u><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Keynote/Plenary 
   Speeches:
         <o:p></o:p></span></u></b></p>
