--- a/index.html
+++ b/index.html
@@ -2570,13 +2570,15 @@ recruiting  Ph.D.s who <b style="mso-bidi-font-weight: normal;"><u>have
 strong mathematical abilities</u></b> (however, this does not imply that you  
 have to come from mathematics department) and <u><strong>great interest in 
 theoretical analysis</strong></u> in order to enjoy with me how 
-to use  mathematics to solve real problems elegantly. Reference books (downloadable from https://libgen.lc/, choose &quot;3&quot; from &quot;Mirrors&quot;): </span></p>
-<p>1. Amir Beck, First-order Methods in Optimization.<br>
-  2. Hoang Tuy, Convex Analysis and Global Optimization, 2nd Edition.<br>
-  3. Mehryar Mohri, Afshin Rostamizadeh, and Ameet Talwalkar, Foundations of Machine Learning, 2nd Edition. You may skip chapters 14 &amp; 16.</p>
+to use  mathematics to solve real problems elegantly. Reference books: </span></p>
+<p>1. Amir Beck, First-order Methods in Optimization, SIAM, 2017.<br>
+  2. Ulisses Braga-Neto, Fundamentals of Pattern 
+  Recognition and Machine Learning, Springer, 2020. (or Christopher M. Bishop, Pattern Recognition and 
+  Machine Learning, Springer, 2006 (Chapters 1-7), which is much simpler) </p>
 <p><span lang="EN-US" style="font-family: &quot;Verdana&quot;,&quot;sans-serif&quot;;">Welcome to send me (zlin (at) <span class="GramE">pku</span> (dot) edu (dot) cn) your detailed resume!   
   <o:p></o:p>
 </span></p>
+<p>Here are the <a href="Reading Materials for Rotating Undergraduate Students.pdf">readling materials for rotating undergraduate students</a>. </p>
 <table width="613" border="1" cellpadding="0">
   <tbody>
   <tr>
